# ChangeLog for sys-apps/lm_sensors
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/lm_sensors/ChangeLog,v 1.52 2006/06/28 11:07:34 blubb Exp $

  28 Jun 2006; Simon Stelling <blubb@gentoo.org> lm_sensors-2.10.0.ebuild:
  stable on amd64

  28 May 2006; Henrik Brix Andersen <brix@gentoo.org>
  lm_sensors-2.9.2.ebuild, lm_sensors-2.10.0.ebuild:
  Fix DEPEND/RDEPEND issue, thanks to carlo in bug #134644.

  15 Mar 2006; Henrik Brix Andersen <brix@gentoo.org>
  lm_sensors-2.10.0.ebuild:
  Stable on x86.

  15 Feb 2006; Henrik Brix Andersen <brix@gentoo.org>
  files/lm_sensors-2.10.0-fancontrol-init.d:
  Fix typo, thanks to Micha Pytasz.

*lm_sensors-2.10.0 (15 Feb 2006)

  15 Feb 2006; Henrik Brix Andersen <brix@gentoo.org>
  +files/lm_sensors-2.10.0-fancontrol-init.d,
  +files/lm_sensors-2.10.0-lm_sensors-init.d,
  +files/lm_sensors-2.10.0-sensord-conf.d,
  +files/lm_sensors-2.10.0-sensord-init.d,
  +files/lm_sensors-2.10.0-sensors-detect-gentoo.patch,
  +lm_sensors-2.10.0.ebuild:
  Version bump. Includes fancontrol init script based on the work of Micha
  Pytasz, bug #98753.
