@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX lm_sensors-2.10.0-fancontrol-init.d 742 RMD160 5764496bbf458a198e9fd33deaf8d29436b5f74e SHA1 6d46a6c6524217f14ce823a7aa3b897fde1b3493 SHA256 a7d118ef835b86a0b69c983f53fdaa386714bf70d5785746476f626d636dbfa0
 MD5 9256ad9507e5277c37efac49a28335e9 files/lm_sensors-2.10.0-fancontrol-init.d 742
 RMD160 5764496bbf458a198e9fd33deaf8d29436b5f74e files/lm_sensors-2.10.0-fancontrol-init.d 742
@@ -34,27 +37,34 @@ AUX lm_sensors-2.9.2-sensors-detect-gentoo.patch 5446 RMD160 67912fd5dbb75ef7c7e
 MD5 ca1a12423f60961873fad394f9bba183 files/lm_sensors-2.9.2-sensors-detect-gentoo.patch 5446
 RMD160 67912fd5dbb75ef7c7e2ceba4b42cb817e6c1f15 files/lm_sensors-2.9.2-sensors-detect-gentoo.patch 5446
 SHA256 524178ae9648be66ae161598394aec26c51f3b2b17e30df1b347efc58c317c61 files/lm_sensors-2.9.2-sensors-detect-gentoo.patch 5446
-DIST lm_sensors-2.10.0.tar.gz 879631
-DIST lm_sensors-2.9.2.tar.gz 860624
-EBUILD lm_sensors-2.10.0.ebuild 4177 RMD160 85e9509c39f2561c0a314a57754aa17629c35758 SHA1 82d0b7e44d71062f73aa90150ba5909492184e7f SHA256 a27c1a4534a4479d8c6e794a1da14efcfd717c35c1cb7ea19c5d052632a168fa
-MD5 18ce35b08911f3e274ed09d523ca9985 lm_sensors-2.10.0.ebuild 4177
-RMD160 85e9509c39f2561c0a314a57754aa17629c35758 lm_sensors-2.10.0.ebuild 4177
-SHA256 a27c1a4534a4479d8c6e794a1da14efcfd717c35c1cb7ea19c5d052632a168fa lm_sensors-2.10.0.ebuild 4177
-EBUILD lm_sensors-2.9.2.ebuild 4098 RMD160 c1bbedc0efb1e077c18e020ad2bd2b23a2325742 SHA1 a51f60cf05cf1626c50787c625d2153608696659 SHA256 f98ad018ee5a3df4e1ae460f653de7ffdcd0a64af4aab14901b2b2dde8fccc13
-MD5 8126d1594f4dcd7b40544f8dfeef9c0b lm_sensors-2.9.2.ebuild 4098
-RMD160 c1bbedc0efb1e077c18e020ad2bd2b23a2325742 lm_sensors-2.9.2.ebuild 4098
-SHA256 f98ad018ee5a3df4e1ae460f653de7ffdcd0a64af4aab14901b2b2dde8fccc13 lm_sensors-2.9.2.ebuild 4098
-MISC ChangeLog 1158 RMD160 f62da27f92cbe3b74d63539930305a1399b4d1db SHA1 5521b036ca548179a810f9a151dc7e6bb708594e SHA256 a5499ba443f746235567ffc7c313786e2a6627ebbe07854c2114017ef2c57eb3
-MD5 c11a4ed3d4a86cb9d1e486a1c1a68487 ChangeLog 1158
-RMD160 f62da27f92cbe3b74d63539930305a1399b4d1db ChangeLog 1158
-SHA256 a5499ba443f746235567ffc7c313786e2a6627ebbe07854c2114017ef2c57eb3 ChangeLog 1158
-MISC metadata.xml 255 RMD160 e6f6333d659d443f0290a257c2b23772ab1cf526 SHA1 1258e0419f1fe7839c4db37602b5999d0e196bca SHA256 255c7b73ddde5e979b6b53de0f9f5b858e22e602e0495f484b2a33cd2987edf9
-MD5 b280eebc74d70d85e664debf1adce2c3 metadata.xml 255
-RMD160 e6f6333d659d443f0290a257c2b23772ab1cf526 metadata.xml 255
-SHA256 255c7b73ddde5e979b6b53de0f9f5b858e22e602e0495f484b2a33cd2987edf9 metadata.xml 255
-MD5 8db9bb315b405ab2c9790e11ec768389 files/digest-lm_sensors-2.10.0 69
-RMD160 81e98fa2c648e4293dcd0d214c8bcd890024a9f3 files/digest-lm_sensors-2.10.0 69
-SHA256 67503d4fe39d8a3b8f6deac7eda60681a34741206037e87db02514984f06db0c files/digest-lm_sensors-2.10.0 69
-MD5 edf2235c80b178421142d5a8d04e50fa files/digest-lm_sensors-2.9.2 68
-RMD160 ec4a7cee978efd39b5c62a30b8d27770ed861106 files/digest-lm_sensors-2.9.2 68
-SHA256 fb41ae752eb370a7af748f62db9f49ccc22fb2b3c59aeec775b6d05f595f25e1 files/digest-lm_sensors-2.9.2 68
+DIST lm_sensors-2.10.0.tar.gz 879631 RMD160 8bb5dd4fbb9b7fba2f60f8a8d00d7b54231ddf37 SHA1 bb45194eebfdc92cf233b7cfe24196cbad6ee721 SHA256 e2fe2c79dc1f219ae85606ad1e556edcd2e55adbabf8bb45dc3c11c00503050d
+DIST lm_sensors-2.9.2.tar.gz 860624 RMD160 1facd2f05ab31d819b12da73067952d74496fbcb SHA1 849f21d94e81dca5ff67191ef2f33b937b1aebbd SHA256 e40573335a895c88bdc040126fd6bb73199bef0169b2b88c6a1ef916c03803c7
+EBUILD lm_sensors-2.10.0.ebuild 4187 RMD160 aa8a51b9dd7da5dcc6410950cf52cf31aecc5d88 SHA1 a1545a072aec1dc52074e04e86cf749b93427736 SHA256 bd41ab4f9bd5228d7f8ee5dddc2058c60339fd3ad8848c45889022d3f37dcdfa
+MD5 91c2c6e3521d70c2e64076178054690f lm_sensors-2.10.0.ebuild 4187
+RMD160 aa8a51b9dd7da5dcc6410950cf52cf31aecc5d88 lm_sensors-2.10.0.ebuild 4187
+SHA256 bd41ab4f9bd5228d7f8ee5dddc2058c60339fd3ad8848c45889022d3f37dcdfa lm_sensors-2.10.0.ebuild 4187
+EBUILD lm_sensors-2.9.2.ebuild 4108 RMD160 8988f215fe17cc27d79c4aa2aa1b964640e6afeb SHA1 ec125bc2f1817aa6772e12f74a0ac989ea73e8e4 SHA256 fe7d4bd3661c3f6e1c05d8125391f5f86aee43ce058924474302b69166b8bd1b
+MD5 10b264ed5228c0c5e535781ff16d0a95 lm_sensors-2.9.2.ebuild 4108
+RMD160 8988f215fe17cc27d79c4aa2aa1b964640e6afeb lm_sensors-2.9.2.ebuild 4108
+SHA256 fe7d4bd3661c3f6e1c05d8125391f5f86aee43ce058924474302b69166b8bd1b lm_sensors-2.9.2.ebuild 4108
+MISC ChangeLog 1337 RMD160 25042560da16e4cfae6e54f0ee20f53d114175d8 SHA1 5eb60ef0a2e776a9a9a71ce26730185a26238b2a SHA256 a9f8e28850e55863e5346955f3bda7ea2315b85b450940c77323a11ae5186e10
+MD5 c450cfe028737827c9693670e3befbf4 ChangeLog 1337
+RMD160 25042560da16e4cfae6e54f0ee20f53d114175d8 ChangeLog 1337
+SHA256 a9f8e28850e55863e5346955f3bda7ea2315b85b450940c77323a11ae5186e10 ChangeLog 1337
+MISC metadata.xml 254 RMD160 2e69b345a5604844f1c5a8256ea172c7a3cc485f SHA1 653c702fdb89577e9d15e9cbca3891e4acdba061 SHA256 9bffc4ff1cf574848699e33b09ff0f6137d6b64b69d82c7b95cafb32ee75becb
+MD5 f3e68295a919220f58e91a1d3468c851 metadata.xml 254
+RMD160 2e69b345a5604844f1c5a8256ea172c7a3cc485f metadata.xml 254
+SHA256 9bffc4ff1cf574848699e33b09ff0f6137d6b64b69d82c7b95cafb32ee75becb metadata.xml 254
+MD5 c049c65d0e7a0c29752c295fdd1f1972 files/digest-lm_sensors-2.10.0 253
+RMD160 ccc9d585517326653d39c0e626af336c8cff269b files/digest-lm_sensors-2.10.0 253
+SHA256 64630ede6a432e80c2386c37675ba5463212430f53041e071957f2b20ba01a9b files/digest-lm_sensors-2.10.0 253
+MD5 d569a1b2682fe1fe3ca977f6017f712c files/digest-lm_sensors-2.9.2 250
+RMD160 0370575f9c4aa29ef313ec05929caad61c7b7caa files/digest-lm_sensors-2.9.2 250
+SHA256 e5acc8f4b135fb18ef10fb67cf04b3aabcf000cd4358fa3cb3bd51ea743ee3a6 files/digest-lm_sensors-2.9.2 250
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.4 (GNU/Linux)
+
+iD8DBQFEtpNpflZ8QqxhrsMRAljAAJ0YZ1X5wqTr46YN6WwwFK126UXRSACeLVOb
+dLz7Js04pQ0yDtik9giPmco=
+=rN9Z
+-----END PGP SIGNATURE-----
