@@ -1,1 +1,3 @@
 MD5 6a5327c9e291c5e2bef62e2277bce962 lm_sensors-2.10.0.tar.gz 879631
+RMD160 8bb5dd4fbb9b7fba2f60f8a8d00d7b54231ddf37 lm_sensors-2.10.0.tar.gz 879631
+SHA256 e2fe2c79dc1f219ae85606ad1e556edcd2e55adbabf8bb45dc3c11c00503050d lm_sensors-2.10.0.tar.gz 879631
