@@ -1,1 +1,3 @@
 MD5 229f83cfbd081d5e7bd46885efec1c72 lm_sensors-2.9.2.tar.gz 860624
+RMD160 1facd2f05ab31d819b12da73067952d74496fbcb lm_sensors-2.9.2.tar.gz 860624
+SHA256 e40573335a895c88bdc040126fd6bb73199bef0169b2b88c6a1ef916c03803c7 lm_sensors-2.9.2.tar.gz 860624
