@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>mobile</herd>
-<maintainer>
-  <email>brix@gentoo.org</email>
-  <name>Henrik Brix Andersen</name>
-</maintainer>
+	<herd>mobile</herd>
+	<maintainer>
+		<email>phreak@gentoo.org</email>
+		<name>Christian Heim</name>
+	</maintainer>
 </pkgmetadata>
