@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/lm_sensors
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/lm_sensors/ChangeLog,v 1.52 2006/06/28 11:07:34 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/lm_sensors/ChangeLog,v 1.53 2006/07/13 18:39:16 phreak Exp $
+
+  13 Jul 2006; Christian Heim <phreak@gentoo.org> metadata.xml,
+  lm_sensors-2.9.2.ebuild, lm_sensors-2.10.0.ebuild:
+  Fixing HOMEPAGE, Quoting; Taking temporary maintainership
 
   28 Jun 2006; Simon Stelling <blubb@gentoo.org> lm_sensors-2.10.0.ebuild:
   stable on amd64
